<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txV002"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginRight="60dp"
            android:text="@string/minus"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/txV001"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginLeft="60dp"
            android:text=""
            android:textSize="24sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txV003"
            android:layout_width="110dp"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:layout_marginRight="60dp"
            android:text="@string/var_dias_desde_ultimo_entreno"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/txV004"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="12sp"
            android:layout_marginLeft="60dp"
            android:text="@string/var_fresh_muscles" />

    </LinearLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="80dp" />



</LinearLayout>